# python-project-83

./: .gitignore  Dockerfile  Makefile  README.md  build.sh  database.sql  pyproject.toml  requirements.txt
.github/workflows/: hexlet-check.yml
page_analyzer/: Makefile  app.py  db.py  requirements.txt
page_analyzer/templates/: index.html  layout.html  url.html  urls.html
