[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask",
    "gunicorn",
    "python-dotenv",
    "psycopg2-binary",
    "validators",
    "requests",
    "beautifulsoup4",
    "flake8"
]

[tool.setuptools.packages.find]
where = ["page_analyzer"]